--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start:prod": "pm2 start ecosystem.config.js --env production"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
